[project]
name = "streamrip"
version = "2.2.0"
description = "A fast, all-in-one music downloader for Qobuz, Deezer, Tidal, and SoundCloud"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "nathom", email = "nathanthomas707@gmail.com" },
]
keywords = ["hi-res", "free", "music", "download"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
]
dependencies = [
  "mutagen>=1.45.1,<2.0.0",
  "tomlkit>=0.7.2,<0.8.0",
  "pathvalidate>=2.4.1,<3.0.0",
  "simple-term-menu>=1.2.1,<2.0.0; sys_platform == 'darwin' or sys_platform == 'linux'",
  "pick>=2,<3; sys_platform == 'win32' or sys_platform == 'cygwin'",
  "windows-curses>=2.2.0,<3.0.0; sys_platform == 'win32' or sys_platform == 'cygwin'",
  "Pillow>=9,<11",
  "deezer-py==1.3.6",
  "pycryptodomex>=3.10.1,<4.0.0",
  "appdirs>=1.4.4,<2.0.0",
  "m3u8>=0.9.0,<0.10.0",
  "aiofiles>=0.7,<0.8",
  "aiohttp>=3.9,<4.0.0",
  "aiodns>=3.0.0,<4.0.0",
  "aiolimiter>=1.1.0,<2.0.0",
  "rich>=13.6.0,<14.0.0",
  "click-help-colors>=0.9.2,<0.10.0",
  "rym-metadata @ git+https://github.com/omnunum/rym_metadata.git@v1.4.4",
]

[project.optional-dependencies]
ssl = ["certifi>=2025.1.31"]

[project.scripts]
rip = "streamrip.rip:rip"

[project.urls]
Homepage = "https://github.com/nathom/streamrip"
Repository = "https://github.com/nathom/streamrip"
"Bug Reports" = "https://github.com/nathom/streamrip/issues"

[dependency-groups]
dev = [
  "types-click>=7.1.2,<8.0.0",
  "types-Pillow>=8.3.1,<9.0.0",
  "ruff>=0.1,<0.2",
  "black>=24,<25",
  "isort>=5.9.3,<6.0.0",
  "flake8>=3.9.2,<4.0.0",
  "setuptools>=67.4.0,<68.0.0",
  "pytest>=7.4,<8.0.0",
  "pytest-mock>=3.11.1,<4.0.0",
  "pytest-asyncio>=0.21.1,<0.22.0",
]

[build-system]
requires = ["setuptools>=67.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["streamrip*"]

[tool.setuptools.package-data]
streamrip = ["config.toml"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
log_level = "DEBUG"
asyncio_mode = "auto"
log_cli = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I", "ASYNC", "N", "RUF", "ERA001"]
ignore = []

# Allow fix for all enabled rules.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
